<resources>
    <string name="app_name">ColorBoxes</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_three">Three</string>
    <string name="button_four">Four</string>
    <string name="button_five">Five</string>
</resources>